Minor update design and add class positionCenter to center tag

--- a/ITI.ItSchool/Templates/KidHomePage.html
+++ b/ITI.ItSchool/Templates/KidHomePage.html
@@ -17,7 +17,7 @@
             </md-fab-actions>
         </md-fab-speed-dial>
     </div>
-    <center>
+    <center class="positionCenter">
         <h2 id="buttonStudent">{{Message}}</h2>
         <md-button id="buttonStudent" class="md-raised md-primary" href="#!/kid/login">Connecte-toi</md-button>
         <br />
