--- a/ITI.ItSchool/Templates/KidLoginPage.html
+++ b/ITI.ItSchool/Templates/KidLoginPage.html
@@ -17,7 +17,7 @@
             </md-fab-actions>
         </md-fab-speed-dial>
     </div>
-    <center>
+    <center class="positionCenter">
         <h3>{{Message}}</h3>
         <div ng-show="!IsTeacher">
             <form novalidate name="LoginForm" ng-submit="Login()">
