--- a/ITI.ItSchool/Templates/KidPlayDictationPage.html
+++ b/ITI.ItSchool/Templates/KidPlayDictationPage.html
@@ -24,7 +24,7 @@
             </md-fab-actions>
         </md-fab-speed-dial>
     </div>
-    <center>
+    <center class="positionCenter">
         <div ng-show="!EasySelected && !MediumSelected && !HardSelected">
             <h1>{{Message}}</h1>
             <table>
