--- a/ITI.ItSchool/Templates/TeacherHomePage.html
+++ b/ITI.ItSchool/Templates/TeacherHomePage.html
@@ -17,7 +17,7 @@
             </md-fab-actions>
         </md-fab-speed-dial>
     </div>
-    <center>
+    <center class="positionCenter">
         <h2 id="buttonTeacher">{{Message}}</h2>
         <md-button id="buttonTeacher" class="md-raised md-primary" href="#!/teacher/login">Connexion</md-button>
         <br />
