--- a/ITI.ItSchool/Content/style.css
+++ b/ITI.ItSchool/Content/style.css
@@ -114,6 +114,27 @@ body {
     margin-right: auto;
 }
 
+#welcomeMessage{
+    margin-left: -15%;
+    width : 140%;
+    text-align : center;
+    padding-bottom : 5%;
+    /*border : 1px solid black;*/
+}
+
+h1, h2 {
+    padding-bottom : 1%;
+}
+
+.lock-size{
+    display:inline-block;
+    /*border: 1px solid black;*/
+}
+
+center.positionCenter{
+    margin-top : -6%;
+}
+
 #IndexNgView{
     /*border : 1px solid yellow;*/
 }
