--- a/ITI.ItSchool/Templates/TeacherSelectExercicesPage.html
+++ b/ITI.ItSchool/Templates/TeacherSelectExercicesPage.html
@@ -26,7 +26,7 @@
             </md-fab-actions>
         </md-fab-speed-dial>
     </div>
-    <center>
+    <center class="positionCenter">
         <h1>{{Message}}</h1>
         <table>
             <tr>
