--- a/ITI.ItSchool/Templates/home.html
+++ b/ITI.ItSchool/Templates/home.html
@@ -1,6 +1,7 @@
 ﻿<div ng-controller="HomeController" id="homeController" class="col-xs-offset-4 col-xs-4 col-sm-offset-4 col-sm-4 col-md-offset-4 col-md-4 col-lg-offset-4 col-lg-4">
+    <h2 id="welcomeMessage">{{Message}}</h2>
     <center>
-        <h2>{{Message}}</h2>
+        
         <md-button class="md-raised md-primary" href="#!/kid/">Élève</md-button>
         <br />
         <md-button class="md-raised md-primary" href="#!/teacher/">Professeur</md-button>
