--- a/ITI.ItSchool/Templates/KidDescriptionBattleCardPage.html
+++ b/ITI.ItSchool/Templates/KidDescriptionBattleCardPage.html
@@ -92,16 +92,14 @@
 
         <div id="gameDescription">
             <h2>Description</h2>
+            <p>Chef NashKar : " Te voilà enfin jeune aventurier. Notre peuple à besoin de ton aide ! "</p>
+            <p>Mission : Relève le défi du Battle Card afin d'aider le chef NashKaR</p>
             <p>
-                Pandente itaque viam fatorum sorte tristissima, qua praestitutum erat eum vita et imperio spoliari, itineribus interiectis permutatione
-                iumentorum emensis venit Petobionem oppidum Noricorum, ubi reseratae sunt insidiarum latebrae omnes, et Barbatio repente apparuit comes,
-                qui sub eo domesticis praefuit, cum Apodemio agente in rebus milites ducens, quos beneficiis suis oppigneratos elegerat imperator certus
-                nec praemiis nec miseratione ulla posse deflecti.<br>
-                Et est admodum mirum videre plebem innumeram mentibus ardore quodam infuso cum dimicationum curulium eventu pendentem. haec similiaque
-                memorabile nihil vel serium agi Romae permittunt. ergo redeundum ad textum.<br />
-                Et quia Montius inter dilancinantium manus spiritum efflaturus Epigonum et Eusebium nec professionem nec dignitatem ostendens aliquotiens
-                increpabat, qui sint hi magna quaerebatur industria, et nequid intepesceret, Epigonus e Lycia philosophus ducitur et Eusebius ab Emissa Pittacas
-                cognomento, concitatus orator, cum quaestor non hos sed tribunos fabricarum insimulasset promittentes armorum si novas res agitari conperissent.
+                Règle : Tu as à ta disposition 5 cartes.
+                Parmi ton jeu de cartes, il te faut cliquer la ou les cartes similaires à la carte modèle se trouvant à droite.
+             </p>
+            <p>
+                Temps : Tu as une minute pour réaliser le Battle Card !<br/>
             </p>
         </div>
 
