--- a/ITI.ItSchool/Templates/KidDescriptionBattleCardPage.html
+++ b/ITI.ItSchool/Templates/KidDescriptionBattleCardPage.html
@@ -92,14 +92,15 @@
 
         <div id="gameDescription">
             <h2>Description</h2>
-            <p>Chef NashKar : " Te voilà enfin jeune aventurier. Notre peuple à besoin de ton aide ! "</p>
-            <p>Mission : Relève le défi du Battle Card afin d'aider le chef NashKaR</p>
+            <p><span class="characterBattleCard">Chef NashKar : </span><br />" Te voilà enfin jeune aventurier. Notre peuple est en danger ! Nous te donnerons le trésor de notre village en échange de ton aide."</p>
+            <p><span class="descriptionTitleBattleCard">Mission : </span> <br /> Relève le défi du Battle Card afin d'aider le chef NashKaR</p>
             <p>
-                Règle : Tu as à ta disposition 5 cartes.
+                <span class="descriptionTitleBattleCard">Règle : </span> <br />
+                Tu as à ta disposition 5 cartes.
                 Parmi ton jeu de cartes, il te faut cliquer la ou les cartes similaires à la carte modèle se trouvant à droite.
              </p>
             <p>
-                Temps : Tu as une minute pour réaliser le Battle Card !<br/>
+                <span class="descriptionTitleBattleCard">Temps : </span> <br /> Tu as une minute pour réaliser le Battle Card !
             </p>
         </div>
 
