--- a/ITI.ItSchool/Templates/TeacherDescriptionBattleCardPage.html
+++ b/ITI.ItSchool/Templates/TeacherDescriptionBattleCardPage.html
@@ -11,15 +11,15 @@
             <div id="gameDescription">
                 <h2 class="ng-binding" id="header">Description</h2>
                 <p>
-                    Pandente itaque viam fatorum sorte tristissima, qua praestitutum erat eum vita et imperio spoliari, itineribus interiectis permutatione
-                    iumentorum emensis venit Petobionem oppidum Noricorum, ubi reseratae sunt insidiarum latebrae omnes, et Barbatio repente apparuit comes,
-                    qui sub eo domesticis praefuit, cum Apodemio agente in rebus milites ducens, quos beneficiis suis oppigneratos elegerat imperator certus
-                    nec praemiis nec miseratione ulla posse deflecti.<br>
-                    Et est admodum mirum videre plebem innumeram mentibus ardore quodam infuso cum dimicationum curulium eventu pendentem. haec similiaque
-                    memorabile nihil vel serium agi Romae permittunt. ergo redeundum ad textum.<br />
-                    Et quia Montius inter dilancinantium manus spiritum efflaturus Epigonum et Eusebium nec professionem nec dignitatem ostendens aliquotiens
-                    increpabat, qui sint hi magna quaerebatur industria, et nequid intepesceret, Epigonus e Lycia philosophus ducitur et Eusebius ab Emissa Pittacas
-                    cognomento, concitatus orator, cum quaestor non hos sed tribunos fabricarum insimulasset promittentes armorum si novas res agitari conperissent.
+                   <span class="descriptionTitleBattleCard">Règle du jeu :</span> <br />
+                   L'enfant possède une main de 5 cartes.
+                   Parmi ces cartes, il doit cliquer sur la ou les cartes correspondant à la carte modèle située à droite. <br /> <br />
+                   <span class="descriptionTitleBattleCard">Temps : </span> <br />
+                   L'enfant a 1 minute pour réaliser l'exercise. <br /><br />
+                   <span class="descriptionTitleBattleCard">Personnalisation : </span> <br />
+                   Vous pouvez choisir entre 3 modes de difficultés.
+                   Le mode facile sera affecté à toute la classe et vous aurez la possibilité de choisir les élèves pour les deux autres niveaux.<br /><br />
+                   Ensuite vous avez le choix entre l'alphabet et les différentes catégories de nombres proposées.
                 </p>
             </div>
 
