--- a/ITI.ItSchool/Templates/KidLoginPage.html
+++ b/ITI.ItSchool/Templates/KidLoginPage.html
@@ -24,14 +24,14 @@
                 <div ng-show="!IsLogedIn">
                     <md-input-container style="width:10%">
                         <label>Pseudo</label>
-                        <input type="text" ng-model="LoginForm.Username" name="cUsername" ng-class="Submitted?'ng-dirty':''" required autofocus>
-                        <span class="error" ng-show="(LoginForm.cUsername.$dirty || submitted) && LoginForm.cUsername.$error.required">Username required</span>
+                        <input type="text" ng-model="LoginData.Username" name="cUsername" ng-class="Submitted?'ng-dirty':''" required autofocus>
+                        <span class="error" ng-show="(LoginData.cUsername.$dirty || submitted) && LoginForm.cUsername.$error.required">Username required</span>
                     </md-input-container>
                     <br />
                     <md-input-container style="width:10%">
                         <label>Mot de passe</label>
-                        <input type="password" ng-model="LoginForm.Password" name="cPassword" ng-class="Submitted?'ng-dirty':''" required autofocus>
-                        <span class="error" ng-show="(LoginForm.cPassword.$dirty || submitted) && LoginForm.cPassword.$error.required">Password required</span>
+                        <input type="password" ng-model="LoginData.Password" name="cPassword" ng-class="Submitted?'ng-dirty':''" required autofocus>
+                        <span class="error" ng-show="(LoginData.cPassword.$dirty || submitted) && LoginForm.cPassword.$error.required">Password required</span>
                     </md-input-container>
                     <br />
                     <md-button class="md-raised md-primary" value="Login" type="submit">{{ButtonMessage}}</md-button>
