--- a/ITI.ItSchool/Templates/TeacherDescriptionBattleCardPage.html
+++ b/ITI.ItSchool/Templates/TeacherDescriptionBattleCardPage.html
@@ -1,28 +1,60 @@
 ﻿<div ng-controller="TeacherDescriptionBattleCardController">
-    <div id="global">
+    <div ng-show="EmptySession">
+        <center>
+            <h3 style="color:red">Vous n'êtes pas connecté, <br />donc non autorisé à être sur cette page.</h3>
+            <md-button class="md-raised md-primary" href="#!/home">Accueil</md-button>
+        </center>
+    </div>
 
-        <md-button id="leftArrow" class="md-fab" aria-label="FAB" ng-click="GoBack()">
-            <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
-        </md-button>
-        <md-button id="rightArrow" class="md-fab" aria-label="FAB" href="#!/teacher/exercices/battleCard/customize">
-            <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_forward_36px.svg"></md-icon>
-        </md-button>
+    <div ng-show="!EmptySession">
+        <div class="lock-size" layout="row" layout-align="left">
+            <md-fab-speed-dial md-open="demo.isOpen" md-direction="{{demo.selectedDirection}}"
+                               ng-class="demo.selectedMode">
+                <md-fab-trigger>
+                    <md-button aria-label="menu" class="md-fab md-warn">
+                        <md-icon md-svg-src="../Images/material-design-icons/svg/menu.svg"></md-icon>
+                    </md-button>
+                </md-fab-trigger>
+                <md-fab-actions>
+                    <md-button aria-label="home" class="md-fab md-raised md-mini" ng-click="GoBack()">
+                        <md-icon style="color:black" md-svg-src="../Images/material-design-icons/svg/home.svg"></md-icon>
+                        <md-tooltip>
+                            Accueil
+                        </md-tooltip>
+                    </md-button>
+                    <md-button aria-label="logout" class="md-fab md-raised md-mini" href="#!/teacher/login">
+                        <md-icon style=" color:black" md-svg-src="../Images/material-design-icons/svg/logout.svg">
+                        </md-icon>
+                        <md-tooltip>
+                            Déconnexion
+                        </md-tooltip>
+                    </md-button>
+                </md-fab-actions>
+            </md-fab-speed-dial>
+        </div>
+        <div id="global">
+            <md-button id="leftArrow" class="md-fab" aria-label="FAB" ng-click="GoBack()">
+                <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
+            </md-button>
+            <md-button id="rightArrow" class="md-fab" aria-label="FAB" href="#!/teacher/exercices/battleCard/customize">
+                <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_forward_36px.svg"></md-icon>
+            </md-button>
 
             <div id="gameDescription">
                 <h2 class="ng-binding" id="header">Description</h2>
                 <p>
-                   <span class="descriptionTitleBattleCard">Règle du jeu :</span> <br />
-                   L'enfant possède une main de 5 cartes.
-                   Parmi ces cartes, il doit cliquer sur la ou les cartes correspondant à la carte modèle située à droite. <br /> <br />
-                   <span class="descriptionTitleBattleCard">Temps : </span> <br />
-                   L'enfant a 1 minute pour réaliser l'exercise. <br /><br />
-                   <span class="descriptionTitleBattleCard">Personnalisation : </span> <br />
-                   Vous pouvez choisir entre 3 modes de difficultés.
-                   Le mode facile sera affecté à toute la classe et vous aurez la possibilité de choisir les élèves pour les deux autres niveaux.<br /><br />
-                   Ensuite vous avez le choix entre l'alphabet et les différentes catégories de nombres proposées.
+                    <span class="descriptionTitleBattleCard">Règle du jeu :</span> <br />
+                    L'enfant possède une main de 5 cartes.
+                    Parmi ces cartes, il doit cliquer sur la ou les cartes correspondant à la carte modèle située à droite. <br /> <br />
+                    <span class="descriptionTitleBattleCard">Temps : </span> <br />
+                    L'enfant a 1 minute pour réaliser l'exercise. <br /><br />
+                    <span class="descriptionTitleBattleCard">Personnalisation : </span> <br />
+                    Vous pouvez choisir entre 3 modes de difficultés.
+                    Le mode facile sera affecté à toute la classe et vous aurez la possibilité de choisir les élèves pour les deux autres niveaux.<br /><br />
+                    Ensuite vous avez le choix entre l'alphabet et les différentes catégories de nombres proposées.
                 </p>
             </div>
+        </div>
+    </div>
 
-     </div>
- 
 </div>
