--- a/ITI.ItSchool/Templates/KidPlayBattleCardPage.html
+++ b/ITI.ItSchool/Templates/KidPlayBattleCardPage.html
@@ -1,30 +1,66 @@
 ﻿<div ng-controller="KidPlayBattleCardController">
-    <div id="clock"></div>
-    <div id="messageClock">{{Time}}</div>
+    <div ng-show="EmptySession">
+        <center>
+            <h3 style="color:red">Vous n'êtes pas connecté, <br />donc non autorisé à être sur cette page.</h3>
+            <md-button class="md-raised md-primary" href="#!/home">Accueil</md-button>
+        </center>
+    </div>
 
-    <div id="score">{{Score}}</div>
-    <!--<div class="logo" ng-include="'/Images/redCard.svg'"></div>-->
-    <!--<object id="card1" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>-->
-    <div id="container">
+    <div ng-show="!EmptySession">
+        <div class="lock-size" layout="row" layout-align="left">
+            <md-fab-speed-dial md-open="demo.isOpen" md-direction="{{demo.selectedDirection}}"
+                               ng-class="demo.selectedMode">
+                <md-fab-trigger>
+                    <md-button aria-label="menu" class="md-fab md-warn">
+                        <md-icon md-svg-src="../Images/material-design-icons/svg/menu.svg"></md-icon>
+                    </md-button>
+                </md-fab-trigger>
+                <md-fab-actions>
+                    <md-button aria-label="home" class="md-fab md-raised md-mini" href="#!/teacher/exercices">
+                        <md-icon style="color:black" md-svg-src="../Images/material-design-icons/svg/home.svg"></md-icon>
+                        <md-tooltip>
+                            Accueil
+                        </md-tooltip>
+                    </md-button>
+                    <md-button aria-label="logout" class="md-fab md-raised md-mini" href="#!/teacher/login">
+                        <md-icon style=" color:black" md-svg-src="../Images/material-design-icons/svg/logout.svg">
+                        </md-icon>
+                        <md-tooltip>
+                            Déconnexion
+                        </md-tooltip>
+                    </md-button>
+                </md-fab-actions>
+            </md-fab-speed-dial>
+        </div>
+        <div id="clock"></div>
+        <div id="messageClock">{{Time}}</div>
 
-        <svg id="gameZone">
-            <foreignobject x="10" y="10" width="100%" height="100%">
-                <div id="hand">
+        <div id="score">{{Score}}</div>
+        <!--<div class="logo" ng-include="'/Images/redCard.svg'"></div>-->
+        <!--<object id="card1" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>-->
+        <div id="container">
 
-                    <object id="card1" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>
-                    <object id="card2" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>
-                    <object id="card3" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>
-                    <object id="card4" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>
-                    <object id="card5" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>
-                </div>
+            <svg id="gameZone">
+                <foreignobject x="10" y="10" width="100%" height="100%">
+                    <div id="hand">
 
-                <div id="deal">
-                    <object id="cardToFind" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>
-                </div>
-            </foreignobject>
-        </svg>
+                        <object id="card1" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>
+                        <object id="card2" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>
+                        <object id="card3" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>
+                        <object id="card4" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>
+                        <object id="card5" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>
+                    </div>
+
+                    <div id="deal">
+                        <object id="cardToFind" class="card" type="image/svg+xml" data={{svgCard}}>ðŸ‚ </object>
+                    </div>
+                </foreignobject>
+            </svg>
+
+        </div>
 
     </div>
+    
 
     <script src="../Scripts/BattleCardJS/snap.svg.js"></script>
     <script src="../Scripts/BattleCardJS/flipclock.js"></script>
