Fixing some bad links in kid's interface.
Swag to the maximum now

--- a/ITI.ItSchool/Templates/KidDescriptionBattleCardPage.html
+++ b/ITI.ItSchool/Templates/KidDescriptionBattleCardPage.html
@@ -103,7 +103,7 @@
                             Accueil
                         </md-tooltip>
                     </md-button>
-                    <md-button aria-label="logout" class="md-fab md-raised md-mini" href="#!/teacher/login">
+                    <md-button aria-label="logout" class="md-fab md-raised md-mini" href="#!/kid/login">
                         <md-icon style=" color:black" md-svg-src="../Images/material-design-icons/svg/logout.svg">
                         </md-icon>
                         <md-tooltip>
