Updating some .. Things

--- a/ITI.ItSchool/Templates/KidRegistrationPage.html
+++ b/ITI.ItSchool/Templates/KidRegistrationPage.html
@@ -61,7 +61,7 @@
                     <md-button class="md-fab" aria-label="FAB" href="#!/kid/">
                         <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
                     </md-button>
-                    <md-button class="md-fab" aria-label="FAB" href="#!/kid/lobby">
+                    <md-button class="md-fab" aria-label="FAB" href="#!/kid/exercises">
                         <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_forward_36px.svg"></md-icon>
                     </md-button>
                 </div>
