--- a/ITI.ItSchool/Templates/TeacherRegistrationPage.html
+++ b/ITI.ItSchool/Templates/TeacherRegistrationPage.html
@@ -60,7 +60,7 @@
                     <md-button class="md-fab" aria-label="FAB" href="#!/teacher/">
                         <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_back_36px.svg"></md-icon>
                     </md-button>
-                    <md-button class="md-fab" aria-label="FAB" href="#!/teacher/lobby">
+                    <md-button class="md-fab" aria-label="FAB" href="#!/teacher/exercises">
                         <md-icon md-svg-src="../Images/material-design-icons/navigation/svg/production/ic_arrow_forward_36px.svg"></md-icon>
                     </md-button>
                 </div>
