--- a/ITI.ItSchool/Views/Shared/_Layout.cshtml
+++ b/ITI.ItSchool/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <script src="~/Scripts/jquery-2.1.3.js"></script>
     <script src="~/Scripts/angular.min.js"></script>
     <script src="~/Scripts/angular-route.min.js"></script>
-    <script src="~/Scripts/bootstrap.min.js"></script>
+    <!-- <script src="~/Scripts/bootstrap.min.js"></script> -->
     <script src="../Components/angular-animate/angular-animate.js"></script>
     <script src="../Components/angular-aria/angular-aria.js"></script>
     <script type="text/javascript" src="../Components/angular-material/angular-material.js"></script>
@@ -49,8 +49,10 @@
         <script src="~/Scripts/jquery-2.1.3.js"></script>
         @RenderSection("Scripts", required: false)
 
+    <!--  
     <footer>
         <p>&copy; @DateTime.Now.Year - It'School Application</p>
     </footer>
+    -->
 </body>
 </html>
