--- a/ITI.ItSchool/Views/Home/Index.cshtml
+++ b/ITI.ItSchool/Views/Home/Index.cshtml
@@ -15,4 +15,28 @@
 
 @section Scripts{
     <script src="~/Scripts/Routing.js"></script>
+    <script src="~/Scripts/01. AngularControllers/ErrorController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/HomeController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/KidDescriptionBattleCardController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/KidHomeController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/KidLobbyController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/KidLoginController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/KidPlayBattleCardController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/KidPlayDictationController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/KidRegistrationController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/KidSelectExercicesController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/TeacherClozeExerciseController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/TeacherCustomizeBattleCardController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/TeacherDescriptionBattleCardController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/TeacherDictationController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/TeacherDragAndDropController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/TeacherDragAndDropMathsController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/TeacherHomeController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/TeacherLobbyController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/TeacherLoginController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/TeacherRegistrationController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/TeacherSelectExercicesController.js"></script>
+    <script src="~/Scripts/01. AngularControllers/TeacherSelectMatterController.js"></script>
+    <script src="~/Scripts/02. Factories/Factories.js"></script>
+    <script src="~/Scripts/03. Services/Services.js"></script>
 }
